--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "ini": "^1.3.5",
     "jquery": "^3.3.1",
     "localstorage": "^1.0.1",
-    "lodash": "^4.17.10",
-    "sudo-prompt": "^8.2.0"
+    "lodash": "^4.17.10"
   },
   "devDependencies": {
     "electron": "^2.0.2",
