--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "start": "./node_modules/.bin/electron .",
     "pack": "electron-builder --dir",
     "dist": "electron-builder",
-    "postinstall": "electron-builder install-app-deps"
+    "postinstall": "electron-builder install-app-deps",
+    "react:start": "react-scripts start",
+    "react:build": "react-scripts build",
+    "react:test": "react-scripts test",
+    "react:eject": "react-scripts eject"
   },
   "license": "ISC",
   "engines": {
@@ -23,9 +27,26 @@
     "ini": "^1.3.5",
     "jquery": "^3.3.1",
     "localstorage": "^1.0.1",
-    "lodash": "^4.17.10"
+    "lodash": "^4.17.10",
+    "react": "^16.8.5",
+    "react-dom": "^16.8.5",
+    "react-redux": "^6.0.1",
+    "react-scripts": "2.1.8",
+    "redux": "^4.0.1",
+    "redux-actions": "^2.6.5",
+    "semantic-ui-react": "^0.86.0"
   },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
   "devDependencies": {
+    "redux-devtools-extension": "^2.13.8",
     "electron": "^2.0.2",
     "electron-builder": "^20.15.0"
   },
